almost done regression

--- a/nbs/00_text_main.ipynb
+++ b/nbs/00_text_main.ipynb
@@ -1551,8 +1551,12 @@
     "                             do_filtering=False, # whether to perform data filtering on this test set\n",
     "                            ):\n",
     "        test_cols = set(get_dset_col_names(test_dset))\n",
-    "        test_cols = test_cols - set(self.label_names)\n",
-    "        missing_cols = set(self.cols_to_keep) - set(self.label_names) - set(test_cols)\n",
+    "        if self.label_names is None: # no label (i.e. regression)\n",
+    "            label_names_set = set([])\n",
+    "        else:\n",
+    "            label_names_set = set(self.label_names)\n",
+    "        test_cols = test_cols - label_names_set\n",
+    "        missing_cols = set(self.cols_to_keep) - label_names_set - set(test_cols)\n",
     "        if len(missing_cols):\n",
     "            raise ValueError(f'Test set does not have these columns required for preprocessings: {missing_cols}')\n",
     "            \n",
@@ -8864,8 +8868,12 @@
     "                             do_filtering=False, # whether to perform data filtering on this test set\n",
     "                            ):\n",
     "        test_cols = set(get_dset_col_names(test_dset))\n",
-    "        test_cols = test_cols - set(self.label_names)\n",
-    "        missing_cols = set(self.cols_to_keep) - set(self.label_names) - test_cols\n",
+    "        if self.label_names is None: # no label (i.e. regression)\n",
+    "            label_names_set = set([])\n",
+    "        else:\n",
+    "            label_names_set = set(self.label_names)\n",
+    "        test_cols = test_cols - label_names_set\n",
+    "        missing_cols = set(self.cols_to_keep) - label_names_set - test_cols\n",
     "        if len(missing_cols):\n",
     "            raise ValueError(f'Test set does not have these columns required for preprocessings: {missing_cols}')\n",
     "            \n",
