--- a/nbs/04_models.roberta.classifiers.ipynb
+++ b/nbs/04_models.roberta.classifiers.ipynb
@@ -51,6 +51,7 @@
     "from transformers.modeling_outputs import SequenceClassifierOutput\n",
     "from transformers import AutoConfig\n",
     "from that_nlp_library.model_main import loss_for_classification\n",
+    "from torch.nn import MSELoss\n",
     "from that_nlp_library.utils import *"
    ]
   },
@@ -202,7 +203,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/models/roberta/classifiers.py#L52){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/models/roberta/classifiers.py#L51){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ConcatHeadSimple\n",
        "\n",
@@ -223,7 +224,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/models/roberta/classifiers.py#L52){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/models/roberta/classifiers.py#L51){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ConcatHeadSimple\n",
        "\n",
@@ -296,7 +297,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/models/roberta/classifiers.py#L77){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/models/roberta/classifiers.py#L75){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### RobertaClassificationHeadCustom\n",
        "\n",
@@ -317,7 +318,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/models/roberta/classifiers.py#L77){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/models/roberta/classifiers.py#L75){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### RobertaClassificationHeadCustom\n",
        "\n",
@@ -389,8 +390,8 @@
     "        \n",
     "        # add_pooling_layer to False to ensure all hidden states are returned and not only the one associated with the [CLS] token.\n",
     "        self.body_model = RobertaModel(config, add_pooling_layer=False)\n",
-    "        # Set up classification head\n",
-    "        self.classification_head = head_class(config=config,**head_class_kwargs)\n",
+    "        # Set up head\n",
+    "        self.head = head_class(config=config,**head_class_kwargs)\n",
     "\n",
     "\n",
     "    def forward(\n",
@@ -423,13 +424,17 @@
     "        )\n",
     "        sequence_output = outputs[0]\n",
     "        sequence_output = sequence_output[:, 0, :]  # take <s> token (equiv. to [CLS])\n",
-    "        logits = self.classification_head(sequence_output) # (bs,sum of all class sizes)\n",
+    "        logits = self.head(sequence_output) # (bs,sum of all class sizes)\n",
     "        \n",
     "        # Calculate losses\n",
     "        if labels is None:\n",
     "            loss=None\n",
     "        else:\n",
-    "            loss = loss_for_classification(logits, labels, \n",
+    "            if self.config.num_labels==1:\n",
+    "                loss_fct = MSELoss()\n",
+    "                loss = loss_fct(logits.squeeze(),labels.squeeze())\n",
+    "            else:\n",
+    "                loss = loss_for_classification(logits, labels, \n",
     "                                       self.is_multilabel,\n",
     "                                       self.is_multihead, \n",
     "                                       self.head_class_sizes,\n",
@@ -455,7 +460,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/models/roberta/classifiers.py#L105){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/models/roberta/classifiers.py#L103){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### RobertaBaseForSequenceClassification\n",
        "\n",
@@ -482,7 +487,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/models/roberta/classifiers.py#L105){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/models/roberta/classifiers.py#L103){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### RobertaBaseForSequenceClassification\n",
        "\n",
@@ -553,8 +558,8 @@
     "        # add_pooling_layer to False to ensure all hidden states are returned  and not only the one associated with the [CLS] token.\n",
     "        self.body_model = RobertaModel(config, add_pooling_layer=False)\n",
     "        \n",
-    "        # Set up classification head\n",
-    "        self.classification_head = head_class(config=config,layer2concat=layer2concat,\n",
+    "        # Set up head\n",
+    "        self.head = head_class(config=config,layer2concat=layer2concat,\n",
     "                                              **head_class_kwargs)\n",
     "\n",
     "    def forward(\n",
@@ -591,18 +596,21 @@
     "        # Note: hidden_size_len = embedding_size\n",
     "        hidden_concat = torch.cat([hidden_states[i][:,0] for i in range(-1,-self.layer2concat-1,-1)],\n",
     "                                  -1) \n",
-    "        logits = self.classification_head(hidden_concat) # (bs,sum of all class sizes)\n",
+    "        logits = self.head(hidden_concat) # (bs,sum of all class sizes)\n",
     "        \n",
     "        # Calculate losses\n",
     "        if labels is None:\n",
     "            loss=None\n",
     "        else:\n",
-    "            loss = loss_for_classification(logits, labels, \n",
+    "            if self.config.num_labels==1:\n",
+    "                loss_fct = MSELoss()\n",
+    "                loss = loss_fct(logits.squeeze(),labels.squeeze())\n",
+    "            else:\n",
+    "                loss = loss_for_classification(logits, labels, \n",
     "                                       self.is_multilabel,\n",
     "                                       self.is_multihead, \n",
     "                                       self.head_class_sizes,\n",
     "                                       self.head_weights)\n",
-    "\n",
     "            \n",
     "        if not return_dict:\n",
     "            output = (logits,) + outputs[2:]\n",
@@ -624,7 +632,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/models/roberta/classifiers.py#L191){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/models/roberta/classifiers.py#L189){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### RobertaHiddenStateConcatForSequenceClassification\n",
        "\n",
@@ -653,7 +661,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/models/roberta/classifiers.py#L191){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/models/roberta/classifiers.py#L189){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### RobertaHiddenStateConcatForSequenceClassification\n",
        "\n",
