--- a/nbs/09_models.gpt2.classifiers.ipynb
+++ b/nbs/09_models.gpt2.classifiers.ipynb
@@ -49,6 +49,7 @@
     "from transformers.models.gpt2.configuration_gpt2 import GPT2Config\n",
     "from transformers.modeling_outputs import SequenceClassifierOutputWithPast\n",
     "from that_nlp_library.model_main import loss_for_classification\n",
+    "from torch.nn import MSELoss\n",
     "from that_nlp_library.utils import *"
    ]
   },
@@ -96,9 +97,9 @@
     "        \n",
     "        # Set up token classification head\n",
     "        if head_class is None:\n",
-    "            self.classification_head = torch.nn.Linear(config.n_embd, num_labels, bias=False)\n",
-    "        else:  \n",
-    "            self.classification_head = head_class(config,**head_class_kwargs)\n",
+    "            self.head = torch.nn.Linear(config.n_embd, num_labels, bias=False)\n",
+    "        else:\n",
+    "            self.head = head_class(config,**head_class_kwargs)\n",
     "\n",
     "        \n",
     "        # Model parallel\n",
@@ -170,13 +171,17 @@
     "        sequence_output = sequence_output[torch.arange(batch_size, device=sequence_output.device), \n",
     "                                          sequence_lengths,:] # (bs,hidden_sizes)\n",
     "        \n",
-    "        logits = self.classification_head(sequence_output) # (bs,sum of all class sizes)\n",
+    "        logits = self.head(sequence_output) # (bs,sum of all class sizes)\n",
     "        \n",
     "        # Calculate losses\n",
     "        if labels is None:\n",
     "            loss=None\n",
     "        else:\n",
-    "            loss = loss_for_classification(logits, labels, \n",
+    "            if self.config.num_labels==1:\n",
+    "                loss_fct = MSELoss()\n",
+    "                loss = loss_fct(logits.squeeze(),labels.squeeze())\n",
+    "            else:\n",
+    "                loss = loss_for_classification(logits, labels, \n",
     "                                       self.is_multilabel,\n",
     "                                       self.is_multihead, \n",
     "                                       self.head_class_sizes,\n",
@@ -301,7 +306,7 @@
     "        self.body_model = GPT2Model(config)\n",
     "        \n",
     "        # Set up classification head\n",
-    "        self.classification_head = head_class(config=config,layer2concat=layer2concat,\n",
+    "        self.head = head_class(config=config,layer2concat=layer2concat,\n",
     "                                              **head_class_kwargs)\n",
     "\n",
     "        # Model parallel\n",
@@ -375,14 +380,18 @@
     "        \n",
     "        hidden_concat = torch.cat([hidden_states[i][torch.arange(batch_size, device=sequence_output.device), sequence_lengths,:] for i in range(-1,-self.layer2concat-1,-1)],\n",
     "                                  -1)        \n",
-    "        logits = self.classification_head(hidden_concat) # (bs,sum of all class sizes)\n",
+    "        logits = self.head(hidden_concat) # (bs,sum of all class sizes)\n",
     "        \n",
     "    \n",
     "        # Calculate losses\n",
     "        if labels is None:\n",
     "            loss=None\n",
     "        else:\n",
-    "            loss = loss_for_classification(logits, labels, \n",
+    "            if self.config.num_labels==1:\n",
+    "                loss_fct = MSELoss()\n",
+    "                loss = loss_fct(logits.squeeze(),labels.squeeze())\n",
+    "            else:\n",
+    "                loss = loss_for_classification(logits, labels, \n",
     "                                       self.is_multilabel,\n",
     "                                       self.is_multihead, \n",
     "                                       self.head_class_sizes,\n",
@@ -413,7 +422,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/models/gpt2/classifiers.py#L144){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/models/gpt2/classifiers.py#L147){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### GPT2HiddenStateConcatForSequenceClassification\n",
        "\n",
@@ -442,7 +451,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/models/gpt2/classifiers.py#L144){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/models/gpt2/classifiers.py#L147){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### GPT2HiddenStateConcatForSequenceClassification\n",
        "\n",
