--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -36,73 +36,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Index"
+    "## What this library offers"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Text preprocessing"
+    "TODO"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- [Text Augmentation](https://anhquan0412.github.io/that-nlp-library/text_augmentation.html)\n",
-    "- [Text Transformation](https://anhquan0412.github.io/that-nlp-library/text_transformation.html)"
+    "## Tutorials\n",
+    "\n",
+    "Visit [https://anhquan0412.github.io/that-nlp-library/](https://anhquan0412.github.io/that-nlp-library/)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "### Text Controller"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- [Text Main](https://anhquan0412.github.io/that-nlp-library/text_main.html)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Model Controller"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- [Model Main](https://anhquan0412.github.io/that-nlp-library/model_main.html)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Roberta-based classification model + Detailed tutorials"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- [Classification Model Architectures, Metrics and Loss Functions](https://anhquan0412.github.io/that-nlp-library/models.classifiers.html)\n",
-    "    - [A simple example using EnviBert model](https://anhquan0412.github.io/that-nlp-library/model_main_envibert.html)\n",
-    "    - [Full tutorial on EnviBert Single-Head model](https://anhquan0412.github.io/that-nlp-library/model_main_envibert_singlehead.html)\n",
-    "    - [Full tutorial on EnviBert Multi-Head model](https://anhquan0412.github.io/that-nlp-library/model_main_envibert_multihead.html)\n",
-    "    - [Full tutorial on EnviBert Multi-Label model](https://anhquan0412.github.io/that-nlp-library/model_main_envibert_multilabel.html)\n",
-    "- [Deep Hierarchical Classification Architecture](https://anhquan0412.github.io/that-nlp-library/models.deep_hierarchical_classifiers.html)\n",
-    "    - [Full tutorial on EnviBert DHC](https://anhquan0412.github.io/that-nlp-library/model_main_envibert_dhc.html)\n",
-    "- [Conditional Probability Classification Architecture](https://anhquan0412.github.io/that-nlp-library/models.conditional_prob_classifiers.html)\n",
-    "    - [Full tutorial on EnviBert Conditional Probability](https://anhquan0412.github.io/that-nlp-library/model_main_envibert_conditional_prob.html)"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
