--- a/nbs/00_text_main_stream.ipynb
+++ b/nbs/00_text_main_stream.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Text Main Streaming\n",
     "\n",
-    "> This module contains the main Python class for data control for streaming data: `TextDataMain`\n",
+    "> This module contains the main Python class for data control for streaming data: `TextDataControllerStreaming`\n",
     "\n",
     "- skip_showdoc: true\n",
     "- skip_exec: true"
@@ -37,17 +37,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# #| export\n",
-    "# from __future__ import annotations\n",
-    "# import pandas as pd\n",
-    "# import numpy as np\n",
-    "# from sklearn.preprocessing import LabelEncoder,MultiLabelBinarizer\n",
-    "# from datasets import DatasetDict,Dataset,IterableDataset,load_dataset,concatenate_datasets\n",
-    "# from pathlib import Path\n",
-    "# from that_nlp_library.utils import *\n",
-    "# from functools import partial\n",
-    "# import warnings\n",
-    "# # from that_nlp_library.text_main import"
+    "#| export\n",
+    "from __future__ import annotations\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.preprocessing import LabelEncoder,MultiLabelBinarizer\n",
+    "from datasets import DatasetDict,Dataset,IterableDataset,load_dataset,concatenate_datasets,Value\n",
+    "from pathlib import Path\n",
+    "from that_nlp_library.utils import *\n",
+    "from that_nlp_library.text_main import tokenize_function,concat_metadatas\n",
+    "from functools import partial\n",
+    "import warnings"
    ]
   },
   {
@@ -2383,8 +2383,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| hide\n",
-    "import nbdev; nbdev.nbdev_export()"
+    "# #| hide\n",
+    "# import nbdev; nbdev.nbdev_export()"
    ]
   }
  ],
