--- a/nbs/07_utils.ipynb
+++ b/nbs/07_utils.ipynb
@@ -219,10 +219,10 @@
    "source": [
     "#| export\n",
     "def lambda_batch(inp, # HuggingFace Dataset\n",
-    "                     feature, # Feature name.\n",
-    "                     func, # The function to apply\n",
-    "                     is_batched, # Whether batching is applied\n",
-    "                    ):\n",
+    "                 feature, # Feature name.\n",
+    "                 func, # The function to apply\n",
+    "                 is_batched, # Whether batching is applied\n",
+    "                ):\n",
     "    return [func(v) for v in inp[feature]] if is_batched else func(inp[feature])"
    ]
   },
@@ -387,7 +387,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/quan/anaconda3/envs/fastai_v2/lib/python3.10/site-packages/nbdev/export.py:54: UserWarning: Notebook '/home/quan/kwon/that-nlp-library/nbs/00_text_main_stream.ipynb' uses `#|export` without `#|default_exp` cell.\n",
+      "Note nbdev2 no longer supports nbdev1 syntax. Run `nbdev_migrate` to upgrade.\n",
+      "See https://nbdev.fast.ai/getting_started.html for more information.\n",
+      "  warn(f\"Notebook '{nbname}' uses `#|export` without `#|default_exp` cell.\\n\"\n"
+     ]
+    }
+   ],
    "source": [
     "#| hide\n",
     "import nbdev; nbdev.nbdev_export()"
