49% with roberta multihead regression tutorial

--- a/nbs/22_model_main_gpt2_multihead.ipynb
+++ b/nbs/22_model_main_gpt2_multihead.ipynb
@@ -157,6 +157,7 @@
     "tdc = TextDataController(dset,\n",
     "                         main_text='Review Text',\n",
     "                         label_names=['Division Name','Department Name'],\n",
+    "                         sup_types=['classification','classification']\n",
     "                         filter_dict={'Review Text': lambda x: x is not None,\n",
     "                                      'Department Name': lambda x: x is not None,\n",
     "                                     },\n",
